--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 Read-and-delete-me
 
 # Cpp build objects
-*.hpp
 *.dll
 *.o
+
+# build on installation
+src/*
+
+!src/Makevars
+!src/Makevars.win
