add prior and posterior plots to plot_stan_bacon.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,6 @@ export(make_stan_dat)
 export(plot_stan_bacon)
 export(stan_bacon)
 exportPattern("(\"^[[:alpha:]]+\")")
+importFrom(ggpubr,ggarrange)
+importFrom(rstan,extract)
 useDynLib(baconr, .registration = TRUE)
