--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: baconr implements the Bayesian Age-Depth model described in
   Bayesian Analysis 6 (3): 457-74. doi:10.1214/ba/1339616472." as a Stan model. 
 License: GPL-3
 Depends: R (>= 3.0.2), Rcpp (>= 0.12.9), methods
-Imports: rstan (>= 2.14.2), rstantools (>= 1.2.0), ggplot2, tidyr, dplyr
+Imports: rstan (>= 2.14.2), rstantools (>= 1.2.0), ggplot2, tidyr, dplyr, ggpubr
 LinkingTo: StanHeaders (>= 2.14.0.1), rstan (>= 2.14.2), BH (>= 1.62.0.1), Rcpp (>= 0.12.9), RcppEigen (>= 0.3.2.9.0)
 LazyData: TRUE
 RoxygenNote: 6.0.1
