document hiatus arguments, modify plotting function, add hiatus example to readme, add news, bumb version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(stan_bacon)
 export(stan_bacon_dev)
 exportPattern("(\"^[[:alpha:]]+\")")
 importFrom(ggpubr,ggarrange)
+importFrom(magrittr,"%>%")
 importFrom(rstan,extract)
 useDynLib(baconr, .registration = TRUE)
