--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,11 @@ export(plot_stan_bacon)
 export(stan_bacon)
 export(stan_bacon_dev)
 exportPattern("(\"^[[:alpha:]]+\")")
+import(Rcpp)
+import(methods)
+import(rstantools)
 importFrom(ggpubr,ggarrange)
 importFrom(magrittr,"%>%")
 importFrom(rstan,extract)
+importFrom(rstan,sampling)
 useDynLib(baconr, .registration = TRUE)
