--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ Description: baconr implements the Bayesian Age-Depth model described in
   'Flexible Paleoclimate Age-Depth Models Using an Autoregressive Gamma Process.'
   Bayesian Analysis 6 (3): 457-74. doi:10.1214/ba/1339616472." as a Stan model. 
 License: GPL-3
-Depends: R (>= 3.0.2), Rcpp (>= 0.12.9), methods
-Imports: rstan (>= 2.14.2), rstantools (>= 1.2.0), ggplot2, tidyr, dplyr, ggpubr, Bchron
-LinkingTo: StanHeaders (>= 2.14.0.1), rstan (>= 2.14.2), BH (>= 1.62.0.1), Rcpp (>= 0.12.9), RcppEigen (>= 0.3.2.9.0)
+Depends: R (>= 3.4.0), methods,Rcpp (>= 0.12.18)
+Imports: rstan (>= 2.17.3), rstantools (>= 1.5.1)
+LinkingTo: StanHeaders (>= 2.17.2), rstan (>= 2.17.3), BH (>= 1.66.0-1), Rcpp (>= 0.12.18), RcppEigen (>= 0.3.3.4.0)
 LazyData: TRUE
 SystemRequirements: GNU make
 NeedsCompilation: yes
