--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Imports:
     methods,
     Rcpp (>= 0.12.0),
     rstan (>= 2.18.1),
-    rstantools (>= 2.0.0)
+    rstantools (>= 2.0.0),
+    ggpubr,
+    magrittr
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
