--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(make_stan_dat)
 export(plot_stan_bacon)
 export(stan_bacon)
 export(stan_bacon_dev)
+export(stan_bacon_hier)
 import(Rcpp)
 import(methods)
 importFrom(ggpubr,ggarrange)
