start vignette for adam

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,3 +28,7 @@ LinkingTo:
     StanHeaders (>= 2.18.0)
 SystemRequirements: GNU make
 RoxygenNote: 7.0.2
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
