--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,9 @@ export(adam)
 export(get_posterior_ages)
 export(interpolate_age_models)
 export(make_stan_dat_adam)
-export(plot_stan_bacon)
+export(plot_adam)
 export(plot_summary_age_models)
 export(summarise_age_models)
-export(summarise_new_ages)
 import(Rcpp)
 import(methods)
 importFrom(ggpubr,ggarrange)
