tweak adam plot, rug to top

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(get_posterior_ages)
 export(interpolate_age_models)
 export(make_stan_dat_adam)
 export(plot_adam)
+export(plot_hierarchical_acc_rate)
 export(plot_summary_age_models)
 export(summarise_age_models)
 import(Rcpp)
