change prior on acc_mean to half normal

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(compare_14C_PDF)
 export(get_posterior_ages)
 export(interpolate_age_models)
 export(make_stan_dat_adam)
+export(plot_acc_mean_prior_posterior)
 export(plot_adam)
 export(plot_hierarchical_acc_rate)
 export(plot_summary_age_models)
