work on error inflation model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ export(make_stan_dat_adam)
 export(plot_acc_mean_prior_posterior)
 export(plot_adam)
 export(plot_hierarchical_acc_rate)
+export(plot_infl_prior_posterior)
 export(plot_summary_age_models)
 export(summarise_age_models)
 import(Rcpp)
 import(methods)
+import(rstan)
 importFrom(Bchron,BchronCalibrate)
 importFrom(ggpubr,ggarrange)
 importFrom(magrittr,"%>%")
