--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,16 +14,19 @@ Biarch: true
 Depends: 
     R (>= 3.4.0)
 Imports: 
+    ggpubr,
+    magrittr,
     methods,
     Rcpp (>= 0.12.0),
+    RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
-    rstantools (>= 2.0.0),
-    ggpubr,
-    magrittr
+    rstantools (>= 2.1.1),
+    Bchron
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
     RcppEigen (>= 0.3.3.3.0),
+    RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
     StanHeaders (>= 2.18.0)
 SystemRequirements: GNU make
