update readme, fix NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(hamstr)
 export(interpolate_age_models)
 export(make_stan_dat_hamstr)
 export(plot_acc_mean_prior_posterior)
+export(plot_age_models)
 export(plot_hamstr)
 export(plot_hierarchical_acc_rate)
 export(plot_infl_prior_posterior)
+export(plot_memory_prior_posterior)
 export(plot_summary_age_models)
 export(summarise_age_models)
 import(Rcpp)
