--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Hierarchical Accumulation Modelling with Stan and R
 Version: 0.4
 Encoding: UTF-8
 Authors@R: c(person("Andrew", "Dolman", email = "andrew.dolman@awi.de", role = c("aut", "cre")))
-Description: hamstr implements a "Bacon style" Bayesian sediment accumulation or 
+Description: hamstr implements a "Bacon-like" Bayesian sediment accumulation or 
   age-depth model with hierarchically structured multi-resolution discrete 
   sediment sections. The Bayesian model is implemented in the Stan probabilistic
   programming language (https://mc-stan.org/). 
