add missing imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,9 @@ Biarch: true
 Depends: 
     R (>= 3.4.0)
 Imports: 
+    ggplot2,
+    dplyr,
+    tidyr,
     ggpubr,
     magrittr,
     methods,
