--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(plot_memory_prior_posterior)
 export(plot_summary_age_models)
 export(summarise_age_models)
 import(Rcpp)
+import(ggplot2)
 import(methods)
 import(rstan)
 importFrom(Bchron,BchronCalibrate)
