--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calibrate_14C_age)
 export(compare_14C_PDF)
 export(get_posterior_ages)
 export(hamstr)
+export(hierarchy_efficiency)
 export(interpolate_age_models)
 export(make_stan_dat_hamstr)
 export(plot_acc_mean_prior_posterior)
@@ -21,6 +22,8 @@ import(rstan)
 importFrom(Bchron,BchronCalibrate)
 importFrom(ggpubr,ggarrange)
 importFrom(magrittr,"%>%")
+importFrom(readr,parse_number)
+importFrom(rlang,.data)
 importFrom(rstan,extract)
 importFrom(rstan,sampling)
 useDynLib(hamstr, .registration = TRUE)
