update readme to include accumulation rate methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,14 @@ S3method(summary,hamstr_interpolated_ages)
 export(calibrate_14C_age)
 export(compare_14C_PDF)
 export(extract_hamstr_fit)
+export(get_posterior_acc_rates)
 export(get_posterior_ages)
 export(get_posterior_parameters)
 export(hamstr)
 export(hierarchy_efficiency)
 export(make_stan_dat_hamstr)
 export(plot_hamstr)
+export(summarise_hamstr_acc_rates)
 import(Rcpp)
 import(ggplot2)
 import(methods)
