--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,10 @@
 Package: hamstr
 Type: Package
 Title: Hierarchical Accumulation Modelling with Stan and R
-Version: 0.5.1
+Version: 0.5.2
 Encoding: UTF-8
 Authors@R: c(person("Andrew", "Dolman", email = "andrew.dolman@awi.de", role = c("aut", "cre")))
-Description: hamstr implements a "Bacon-like" Bayesian sediment accumulation or 
-  age-depth model with hierarchically structured multi-resolution discrete 
-  sediment sections. The Bayesian model is implemented in the Stan probabilistic
-  programming language (https://mc-stan.org/). 
-  "Blaauw, Maarten, and J. Andrés Christen. 2011. 'Flexible Paleoclimate 
-  Age-Depth Models Using an Autoregressive Gamma Process.'  Bayesian Analysis 6 
-  (3): 457-74. doi:10.1214/ba/1339616472"
+Description: hamstr implements a "Bacon-like" Bayesian sediment accumulation or age-depth model with hierarchically structured multi-resolution discrete sediment sections. The Bayesian model is implemented in the Stan probabilistic programming language (https://mc-stan.org/). "Blaauw, Maarten, and J. Andrés Christen. 2011. 'Flexible Paleoclimate   Age-Depth Models Using an Autoregressive Gamma Process.'  Bayesian Analysis 6 (3): 457-74. doi:10.1214/ba/1339616472"
 License: GPL-3
 LazyData: true
 Biarch: true
@@ -46,5 +40,7 @@ SystemRequirements: GNU make
 RoxygenNote: 7.1.1
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    rbacon (>= 2.5.2),
+    testthat
 VignetteBuilder: knitr
