--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(summary,hamstr_fit)
 S3method(summary,hamstr_interpolated_ages)
 export(calibrate_14C_age)
 export(compare_14C_PDF)
+export(default_K)
 export(extract_hamstr_fit)
 export(get_posterior_acc_rates)
 export(get_posterior_ages)
