--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,hamstr_fit)
 S3method(predict,hamstr_fit)
 S3method(summary,hamstr_fit)
 S3method(summary,hamstr_interpolated_ages)
+export(SummariseEmpiricalPDF)
 export(calibrate_14C_age)
 export(compare_14C_PDF)
 export(default_K)
