--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(summary,hamstr_fit)
 S3method(summary,hamstr_interpolated_ages)
 export(calibrate_14C_age)
 export(compare_14C_PDF)
+export(get_sampler_args)
 export(hamstr)
 import(Rcpp)
 import(ggplot2)
