posterior method for parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ S3method(summary,hamstr_fit)
 S3method(summary,hamstr_interpolated_ages)
 export(calibrate_14C_age)
 export(compare_14C_PDF)
+export(get_stan_sampler_args)
 export(hamstr)
 export(hamstr_control)
-export(stan_sampler_args)
 import(Rcpp)
 import(ggplot2)
 import(methods)
