remove R CMD check notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(rstan,extract)
 importFrom(rstan,sampling)
+importFrom(stats,density)
 useDynLib(hamstr, .registration = TRUE)
