--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,10 @@ import(Rcpp)
 import(ggplot2)
 import(methods)
 import(rstan)
+import(rstantools)
 importFrom(Bchron,BchronCalibrate)
+importFrom(RcppParallel,CxxFlags)
+importFrom(RcppParallel,RcppParallelLibs)
 importFrom(ggpubr,ggarrange)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
