--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-* text=auto
+# Declare files that will always have LF line endings on checkout.
+*.cpp text eol=lf
+*.h text eol=lf
+Makevars  text eol=lf
