replace ggpubr with patchwork in plot_hamstr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,12 @@ export(hamstr_control)
 import(Rcpp)
 import(ggplot2)
 import(methods)
+import(patchwork)
 import(rstan)
 import(rstantools)
 importFrom(Bchron,BchronCalibrate)
 importFrom(RcppParallel,CxxFlags)
 importFrom(RcppParallel,RcppParallelLibs)
-importFrom(ggpubr,ggarrange)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
 importFrom(rstan,extract)
