--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ S3method(plot,hamstr_fit)
 S3method(predict,hamstr_fit)
 S3method(summary,hamstr_fit)
 S3method(summary,hamstr_interpolated_ages)
+export(GetNextMultiPrimes)
 export(calibrate_14C_age)
 export(compare_14C_PDF)
 export(get_stan_sampler_args)
 export(hamstr)
 export(hamstr_control)
+export(hamstr_prime)
 import(Rcpp)
 import(ggplot2)
 import(methods)
