--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,8 @@ Imports:
     rstan (>= 2.18.1),
     rstantools (>= 2.1.1),
     Bchron
+Remotes: 
+    andrewcparnell/Bchron
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
