import rcarbon not Bchron

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ import(rstantools)
 importFrom(RcppParallel,CxxFlags)
 importFrom(RcppParallel,RcppParallelLibs)
 importFrom(magrittr,"%>%")
+importFrom(rcarbon,calibrate)
 importFrom(rlang,.data)
 importFrom(rstan,extract)
 importFrom(rstan,sampling)
