--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,7 @@ Imports:
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
     rstantools (>= 2.1.1),
-    Bchron
+    rcarbon
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
